<resources>
    <string name="app_name">MyFM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="age_abreviation">IDA</string>
    <string name="position_abreviation">POS</string>
    <string name="name_text">NOME</string>
    <string name="plantel_text">plantel</string>
    <string name="empty_state_header">Você ainda não possui um plantel</string>
    <string name="empty_state_description">Para iniciar faça o upload do seu arquivo\n clicando no botão abaixo</string>
    <string name="upload_button_text">Upload do meu elenco</string>
    <string name="player_list_name">nome</string>
    <string name="player_list_position">posição</string>
    <string name="player_list_age">idade</string>
    <string name="download_view_button">Baixar visualização</string>
    <string name="dialog_title_success">Upload realizado com sucesso!</string>
    <string name="dialog_body_success">Agora você já pode acessar cada jogador do seu plantel, verificar suas informações e atributos e ter um apoio ao planejar e/ou reformular seu time.</string>
    <string name="dialog_button_success">começar</string>

    <string name="tutorial_desc_one">Em seu jogo no computador, acesse a aba de “Plantel”.</string>
    <string name="tutorial_desc_two">No menu de visualização, baixe o arquivo acima e importe-o no jogo...</string>
    <string name="tutorial_desc_three">...selecione o arquivo baixado e clique em Carregar.</string>
    <string name="tutorial_desc_four">Clique ao lado esquerdo do nome do primeiro jogador da lista e em seguida o comando “ctrl + a” para selecionar todos do elenco.</string>
    <string name="tutorial_desc_five">Com todos os jogadores selecionados, aperte “ctrl + p”, escolha “Ficheiro de Texto”, clique em Ok para salvar...</string>
    <string name="tutorial_desc_six">Agora basta selecionar o arquivo gerado e aguardar seus jogadores serem carregados</string>
</resources>