<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:weightSum="10">

    <TextView
        android:id="@+id/nameText"
        style="@style/PlayerCard.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:text="@string/player_list_name" />

    <TextView
        android:id="@+id/positionText"
        style="@style/PlayerCard.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/player_list_position"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/ageText"
        style="@style/PlayerCard.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/player_list_age"
        android:textAlignment="center" />

</LinearLayout>